Fix offset caused in Navbar due to fb like button
Fixes Facebook like button causing navbar to be taller than it should be.
Causes a jump in the page after load due to element being too tall.

--- a/assets/stylesheets/coursemology.org/facebook_like_button.scss
+++ b/assets/stylesheets/coursemology.org/facebook_like_button.scss
@@ -1,4 +1,4 @@
 .navbar-header .fb-like-button {
   float: left;
-  padding: 15px;
+  padding: 15px 15px 0;
 }
